[package]
name = "msg-io"
description = "A generic, streaming, incremental parser/deserializer over I/O (sync or async)."
version = "0.0.1"
edition = "2024"
authors = ["Chris Buchter <print.practical@gmail.com"]
categories = ["network-programming", "io"]

[dependencies]
bytes = "1.11"
futures-util = { version = "0.3", features = ["io"], optional = true }
tokio = { version = "1.48", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }

[features]
default = ["sync", "async", "tokio"]
sync = []
async = ["dep:futures-util"]
tokio = ["async", "dep:tokio", "dep:tokio-util"]