[package]
name = "msg-io"
description = "A rust crate for providing a general framework for reading / writing structured data from / to I/O streams."
version = "0.0.1"
edition = "2024"
authors = ["Chris Buchter <print.practical@gmail.com>"]
repository = "https://github.com/PrintPractical/msg-io"
categories = ["rust-patterns", "network-programming"]
license-file = "LICENSE"

[dependencies]
bytes = "1.11"
futures-util = { version = "0.3", features = ["io"], optional = true }
tokio = { version = "1.48", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }

[features]
default = ["sync", "tokio", "async"]
sync = []
async = ["dep:futures-util"]
tokio = ["async", "dep:tokio", "dep:tokio-util"]